<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/initLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/statusText"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/init"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/infoText"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/grantPrivilegeBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/grantBtnText"
            android:visibility="invisible"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ctrlLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="10dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/GenshinVersion"
                />
            <TextView
                android:id="@+id/gameVersionText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/switchVersionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SwitchVersion"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/startGameBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartGenshin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkBooster"/>
                <TextView
                    android:id="@+id/networkBoosterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/SelectBoosterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SelectBooster"
                android:layout_marginBottom="5dp"/>
            <Button
                android:id="@+id/StartBoosterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartBooster"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:weightSum="2">
            <Button
                android:id="@+id/showInfoButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/AboutApp"
                android:layout_marginEnd="5dp" />
            <Button
                android:id="@+id/restartBtn"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Reload" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>